2003-12-12 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added size command
	* Added depgraph command
	
2003-12-11 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added list command
	
2003-10-05 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added files command
	* Added belongs command
	
